centered stripe form

--- a/frontend/src/Stripe.css
+++ b/frontend/src/Stripe.css
@@ -1,3 +1,11 @@
+.Stripe {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin-top: 40px;
+}
+
 .Stripe form {
   width: 30vw;
   min-width: 500px;
